@@ -1,7 +1,14 @@
 #!/bin/bash
+OUT_FILE=/mixtt/ixpman_files/output.txt
 
-service openvswitch-switch start
-ovs-vsctl set-manager ptcp:6640
-faucet &
+service openvswitch-switch start 2>&1 | tee $OUT_FILE
+ovs-vsctl set-manager ptcp:6640 2>&1 | tee -a $OUT_FILE
+faucet 2>&1 | tee -a $OUT_FILE &
 sleep 1s
-mixtt
+mixtt 2>&1 | tee -a $OUT_FILE
+
+cd ixpman_files
+python3 parser.py 2>&1 | tee -a $OUT_FILE
+NOW=`date +%Y_%m_%d_%H_%M_%S`
+mkdir -p logs
+cp output.txt logs/output_$NOW.log
